samples/network/consistent_dr_v1_13_5.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: hellodr
spec:
  host: helloworld.sample3.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: X-User
