samples/network/consistent_dr_v1_23_0.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: dr-consistenthash
spec:
  host: helloworld.sample3.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: X-User
